--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
     .different-emoji {
       display: block;
     }
+    .footer-logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
     @media (max-width: 768px) {
   .intro-text,
