--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
   <!-- FOOTER SECTION -->
   <footer class="footer-section">
-    <h2>How I can help you?</h2>
+    <h2>How can I help you?</h2>
     <a href="https://wa.link/amfm2j" class="footer-button">📩 Get In Touch</a>
     <div class="footer-logo">
       <img src="Firma.svg" alt="Pablo Landos Signature">
