--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       --secondary: #999;
       --bg: #0f0f0f;
       --accent: #00ccff;
+      --highlight: #1e1e1e;
     }
 
     * {
@@ -23,6 +24,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--bg);
       color: var(--primary);
+      scroll-behavior: smooth;
     }
 
     header, .different-section, .portfolio-section, footer {
@@ -36,6 +38,12 @@
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
+      animation: fadeInUp 1s ease;
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .intro-text, .different-text {
@@ -69,14 +77,17 @@
       text-decoration: none;
       color: var(--primary);
       margin-top: 20px;
-      transition: 0.3s;
+      transition: 0.3s ease;
       font-size: 1rem;
+      background: transparent;
     }
 
     .cta-button:hover, .browse-button:hover, .footer-button:hover {
       background-color: var(--accent);
       color: #000;
       border-color: var(--accent);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0, 204, 255, 0.4);
     }
 
     .profile-image, .different-emoji {
@@ -91,31 +102,32 @@
       height: auto;
       border-radius: 20px;
       object-fit: cover;
+      transition: transform 0.3s ease;
+    }
+
+    .profile-image img:hover {
+      transform: scale(1.05);
     }
 
     .different-emoji {
       display: block;
     }
-    .footer-logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
 
     @media (max-width: 768px) {
-  .intro-text,
-  .different-text,
-  .footer-section {
-    text-align: center;
-  }
+      .intro-text,
+      .different-text,
+      .footer-section {
+        text-align: center;
+      }
 
-  .cta-button,
-  .browse-button,
-  .footer-button {
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
+      .cta-button,
+      .browse-button,
+      .footer-button {
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       header, .different-section {
         flex-direction: column;
         display: flex;
@@ -124,6 +136,12 @@
 
       .different-emoji {
         display: none;
+      }
+
+      .footer-logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     }
 
@@ -135,16 +153,17 @@
     }
 
     .project-card {
-      background-color: #1a1a1a;
+      background-color: var(--highlight);
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      transition: transform 0.3s;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-decoration: none;
     }
 
     .project-card:hover {
-      transform: scale(1.03);
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
 
     .project-card img {
