--- a/index.html
+++ b/index.html
@@ -224,6 +224,30 @@
       font-size: 0.8rem;
       color: #666;
     }
+    #lang-switcher {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  z-index: 2;
+}
+
+#lang-switcher button {
+  background: transparent;
+  border: 1px solid var(--primary);
+  color: var(--primary);
+  margin-left: 10px;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 0.9rem;
+}
+
+#lang-switcher button:hover {
+  background: var(--accent);
+  color: #000;
+}
+
   </style>
 </head>
 <body>
@@ -231,6 +255,10 @@
 
 <!-- HEADER SECTION -->
 <header>
+  <div id="lang-switcher">
+    <button onclick="setLanguage('en')" id="btn-en">🇺🇸 EN</button>
+    <button onclick="setLanguage('es')" id="btn-es">🇪🇸 ES</button>
+  </div>
   <div class="intro-text">
     <p>👋 Hey, I'm Pablo</p>
     <h1>Obsessed with creating <em>timeless</em><br />digital experiences with <strong>AI</strong>.</h1>
@@ -343,6 +371,48 @@
     },
     detectRetina: true
   });
+</script>
+<script>
+  const translations = {
+    en: {
+      introP: "👋 Hey, I'm Pablo",
+      introH1: "Obsessed with creating <em>timeless</em><br />digital experiences with <strong>AI</strong>.",
+      introDesc: "My passion lies in leveraging cutting-edge technologies to streamline business processes and enhance digital presence. With strong expertise in AI-powered automation systems.",
+      getInTouch: "📩 Get In Touch",
+      whatDiff: "What makes me <em>different?</em>",
+      diffDesc: "What sets me apart from others is my expertise in AI-powered automation systems, along with strong skills in social media management and content creation. I offer a holistic approach to driving efficiency and engagement across diverse digital platforms.",
+      browse: "֎ Browse My Work",
+      projects: "Projects I've Contributed To",
+      help: "How I can help you?"
+    },
+    es: {
+      introP: "👋 Hola, soy Pablo",
+      introH1: "Obsesionado con crear <em>experiencias digitales</em><br />inolvidables usando <strong>IA</strong>.",
+      introDesc: "Mi pasión es aprovechar tecnologías avanzadas para automatizar procesos y mejorar la presencia digital. Tengo experiencia en sistemas de automatización con inteligencia artificial.",
+      getInTouch: "📩 Contáctame",
+      whatDiff: "¿Qué me hace <em>diferente?</em>",
+      diffDesc: "Lo que me diferencia es mi experiencia en sistemas de automatización con IA, además de habilidades en gestión de redes sociales y creación de contenido. Ofrezco un enfoque integral para mejorar la eficiencia y el engagement digital.",
+      browse: "֎ Ver Mi Trabajo",
+      projects: "Proyectos en los que he contribuido",
+      help: "¿Cómo puedo ayudarte?"
+    }
+  };
+
+  function setLanguage(lang) {
+    const t = translations[lang];
+    document.querySelector('.intro-text p').innerHTML = t.introP;
+    document.querySelector('.intro-text h1').innerHTML = t.introH1;
+    document.querySelector('.intro-text > p:nth-of-type(2)').innerHTML = t.introDesc;
+    document.querySelector('.cta-button').innerHTML = t.getInTouch;
+
+    document.querySelector('.different-text h2').innerHTML = t.whatDiff;
+    document.querySelector('.different-text p').innerHTML = t.diffDesc;
+    document.querySelector('.browse-button').innerHTML = t.browse;
+
+    document.querySelector('.portfolio-section h2').innerHTML = t.projects;
+    document.querySelector('.footer-section h2').innerHTML = t.help;
+    document.querySelector('.footer-button').innerHTML = t.getInTouch;
+  }
 </script>
 </body>
 </html>
