--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ body.loaded #loader {
     <textarea name="details" rows="5" placeholder="Tell me a bit about your project..." required></textarea>
   
     <!-- Opcional: redireccionar después del envío -->
-    <input type="hidden" name="_next" value="https://landos98.github.io/thanks.html">
+    <input type="hidden" name="_next" value="https://landos98.github.io/thanks">
     <!-- Evita captcha -->
     <input type="hidden" name="_captcha" value="false">
   
