--- a/index.html
+++ b/index.html
@@ -385,6 +385,10 @@ body.loaded #loader {
     gap: 60px; /* más espacio entre íconos */
   }
 }
+html, body {
+  background-color: #0f0f0f;
+}
+
   </style>
 </head>
 <body>
